@@ -1,5 +1,14 @@
 2016-10-28  Florian Weimer  <fweimer@redhat.com>
 
+	* crypt/sha256.c, crypt/sha256-block.c,
+	sysdeps/sparc/sparc64/multiarch/sha256-block.c: Rename
+	sha256_process_block to __sha256_process_block.
+	* crypt/sha512.c, crypt/sha512-block.c,
+	sysdeps/sparc/sparc64/multiarch/sha512-block.c: Rename
+	sha512_process_block to __sha512_process_block.
+
+2016-10-28  Florian Weimer  <fweimer@redhat.com>
+
 	[BZ #20729]
 	Support i386 builds with CFLAGS which imply -fno-omit-frame-pointer.
 	* sysdeps/unix/sysv/linux/i386/Makefile
